Add Invitation Entity and Integrate Web Socket